[package]
name = "markdown2mrkdwn"
version = "0.8.3"
edition = "2021"
description = "A library which converts GitHub Flavored Markdown to Slack's mrkdwn or blocks."
license = "MIT"

[lib]
name = "markdown2mrkdwn"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
markdown = "1.0.0-alpha"
serde_json = { version = "1.0", default-features = false, features = ["std"] }
